# CompensatedBLAS

./: AGENTS.md  CMakeLists.txt  README.md
.github/workflows/: ci.yml
cmake/: CompensatedBLASConfig.cmake.in  ReidBLASConfig.cmake.in
examples/: CMakeLists.txt  conjugate_residual_solver.cpp  eigenvalue_helper.cpp  syrk_compensation_demo.cpp
scripts/: process_xblat_output.py  run_tests.sh  run_xblat_integration.sh
src/: compensated_blas.cpp  compensated_blas.hpp  compensated_blas_ilp64.h  compensated_blas_ilp64_dispatch.cpp  compensated_blas_lp64.h  compensated_blas_lp64_wrappers.cpp  compensated_blas_template.h  reidblas.cpp  reidblas.hpp  reidblas_blas_ilp64.h  reidblas_blas_ilp64_dispatch.cpp  reidblas_blas_ilp64_internal.hpp  reidblas_blas_lp64.h  reidblas_blas_lp64_wrappers.cpp  reidblas_blas_template.h  soa_accumulator.hpp
src/blas/ilp64/: caxpy.cpp  ccopy.cpp  cdotc.cpp  cdotu.cpp  cgbmv.cpp  cgemm.cpp  cgemv.cpp  cgerc.cpp  cgeru.cpp  chbmv.cpp  chemm.cpp  chemv.cpp  cher.cpp  cher2.cpp  cher2k.cpp  cherk.cpp  chpmv.cpp  chpr.cpp  chpr2.cpp  crotg.cpp  cscal.cpp  csrot.cpp  csscal.cpp  cswap.cpp  csymm.cpp  csyr2k.cpp  csyrk.cpp  ctbmv.cpp  ctbsv.cpp  ctpmv.cpp  ctpsv.cpp  ctrmm.cpp  ctrmv.cpp  ctrsm.cpp  ctrsv.cpp  dasum.cpp  daxpy.cpp  dcopy.cpp  ddot.cpp  dgbmv.cpp  (+106 more)
src/impl/: backend_stub.hpp  compensated_accumulator.hpp  compensated_arithmetic.hpp  compensated_blas_backend_ilp64.cpp  compensated_blas_backend_ilp64.hpp  compensated_blas_ilp64_functions.def  naive_blas_backend.cpp  naive_blas_backend.hpp  reidblas_backend_ilp64.cpp  reidblas_backend_ilp64.hpp  reidblas_ilp64_functions.def  runtime.cpp  xerbla_shim.cpp
test/: CMakeLists.txt  compensated_blas_test.cpp  kdiv_test.cpp  reidblas_test.cpp
